# prestornado

./: .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
prestornado/: common.py  presto.py
prestornado/tests/: dbapi_test_case.py  test_prestornado.py
scripts/: travis-install.sh
