[metadata]
name = prestornado
author = Jianing Yang
author-email = jianingy.yang@gmail.com
summary = Asynchronous PrestoDB DB-API for Tornado Web Server
description-file = README.md
license = Apache-2
url = https://github.com/jianingy/prestornado
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Database :: Front-Ends

[files]
packages =
    prestornado

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
